--- a/WebApi/Web.Release.config
+++ b/WebApi/Web.Release.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="DefaultConnection"
+      connectionString="Server=tcp:xal6s1q2qz.database.windows.net,1433;Database=webapidb;User ID=wadmin@xal6s1q2qz;Password=Gkvw526%;Trusted_Connection=False;Encrypt=True;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
