--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebApi-20141223094319.mdf;Initial Catalog=aspnet-WebApi-20141223094319;Integrated Security=True" />
-    <add name="WebApiDataConnection" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3307;database=webapi-data;uid=root;password=s123456" />
+    <!--<add name="WebApiDataConnection" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3307;database=webapi-data;uid=root;password=s123456" />-->
     <!--<add name="WebApiDataConnection" providerName="System.Data.SqlClient" connectionString="server=localhost;port=3307;database=webapi-data;uid=root;password=s123456" />-->
   </connectionStrings>
   <appSettings></appSettings>
