--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,7 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+WebApi/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+WebApi/App_Data/aspnet-WebApi-20141223094319.mdf
+WebApi/App_Data/aspnet-WebApi-20141223094319_log.ldf
+WebApi.v12.suo
