--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -210,8 +210,10 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PatientListController.cs" />
     <Compile Include="Controllers\PatientsController.cs" />
     <Compile Include="Controllers\PatientVisitsController.cs" />
+    <Compile Include="Controllers\SoapListController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DAL\AppDbContext.cs" />
     <Compile Include="DAL\Patient.cs" />
@@ -243,11 +245,16 @@
     <Compile Include="Migrations\201501080552224_FMHx.Designer.cs">
       <DependentUpon>201501080552224_FMHx.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201501090530105_MissingMigration.cs" />
+    <Compile Include="Migrations\201501090530105_MissingMigration.Designer.cs">
+      <DependentUpon>201501090530105_MissingMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\PatientModels.cs" />
+    <Compile Include="Models\SoapModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -347,6 +354,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501080552224_FMHx.resx">
       <DependentUpon>201501080552224_FMHx.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501090530105_MissingMigration.resx">
+      <DependentUpon>201501090530105_MissingMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
