--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,12 @@ WebApi/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 WebApi/App_Data/aspnet-WebApi-20141223094319.mdf
 WebApi/App_Data/aspnet-WebApi-20141223094319_log.ldf
 WebApi.v12.suo
+WebApi/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+WebApi/obj/Debug/WebApi.pdb
+WebApi/obj/Debug/WebApi.dll
+WebApi/obj/Debug/WebApi.csprojResolveAssemblyReference.cache
+WebApi/obj/Debug/WebApi.csprojResolveAssemblyReference.cache
+WebApi/obj/Debug/WebApi.csproj.GenerateResource.Cache
+WebApi/obj/Debug/WebApi.csproj.FileListAbsolute.txt
+WebApi/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+WebApi/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
