--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -40,6 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\MySql.Data.Entities.EF6.6.8.3\lib\net45\MySql.Data.dll</HintPath>
@@ -60,6 +61,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Abstractions" />
@@ -210,13 +212,16 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AncillaryProceduresController.cs" />
+    <Compile Include="Controllers\CoordinationAssmtsController.cs" />
     <Compile Include="Controllers\CranialNerveAssmtsController.cs" />
     <Compile Include="Controllers\DrugHistoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MBMsController.cs" />
     <Compile Include="Controllers\MMTsController.cs" />
     <Compile Include="Controllers\PatientListController.cs" />
     <Compile Include="Controllers\PatientsController.cs" />
     <Compile Include="Controllers\PatientVisitsController.cs" />
+    <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\ROM2Controller.cs" />
     <Compile Include="Controllers\ROMsController.cs" />
     <Compile Include="Controllers\SensoryAxesController.cs" />
@@ -225,6 +230,11 @@
     <Compile Include="DAL\AppDbContext.cs" />
     <Compile Include="DAL\Patient.cs" />
     <Compile Include="DAL\PatientVisit.cs" />
+    <Compile Include="DataSet\SoapDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SoapDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -324,20 +334,80 @@
     <Compile Include="Migrations\201502010922509_CranialNerveAssmt.Designer.cs">
       <DependentUpon>201502010922509_CranialNerveAssmt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502010935245_CranialNerveUpdate.cs" />
+    <Compile Include="Migrations\201502010935245_CranialNerveUpdate.Designer.cs">
+      <DependentUpon>201502010935245_CranialNerveUpdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502022307424_UpToMBM.cs" />
+    <Compile Include="Migrations\201502022307424_UpToMBM.Designer.cs">
+      <DependentUpon>201502022307424_UpToMBM.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502060819387_UpdateMBM.cs" />
+    <Compile Include="Migrations\201502060819387_UpdateMBM.Designer.cs">
+      <DependentUpon>201502060819387_UpdateMBM.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502060822159_UpdateMBM2.cs" />
+    <Compile Include="Migrations\201502060822159_UpdateMBM2.Designer.cs">
+      <DependentUpon>201502060822159_UpdateMBM2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502080630482_PlanExceptLandmarks.cs" />
+    <Compile Include="Migrations\201502080630482_PlanExceptLandmarks.Designer.cs">
+      <DependentUpon>201502080630482_PlanExceptLandmarks.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502080841184_posteriorViewUpdate.cs" />
+    <Compile Include="Migrations\201502080841184_posteriorViewUpdate.Designer.cs">
+      <DependentUpon>201502080841184_posteriorViewUpdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502080935599_posteriorViewUpdate2.cs" />
+    <Compile Include="Migrations\201502080935599_posteriorViewUpdate2.Designer.cs">
+      <DependentUpon>201502080935599_posteriorViewUpdate2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502110314488_FunctionalAnalysisUpdate.cs" />
+    <Compile Include="Migrations\201502110314488_FunctionalAnalysisUpdate.Designer.cs">
+      <DependentUpon>201502110314488_FunctionalAnalysisUpdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201502110447121_PulmonaryAssessment.cs" />
+    <Compile Include="Migrations\201502110447121_PulmonaryAssessment.Designer.cs">
+      <DependentUpon>201502110447121_PulmonaryAssessment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CustomValidation.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\PatientModels.cs" />
+    <Compile Include="Models\ReportModels.cs" />
     <Compile Include="Models\SoapModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
+    <Compile Include="Reports\SoapReport.aspx.cs">
+      <DependentUpon>SoapReport.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reports\SoapReport.aspx.designer.cs">
+      <DependentUpon>SoapReport.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
+    <Content Include="DataSet\SoapDataSet.xsc">
+      <DependentUpon>SoapDataSet.xsd</DependentUpon>
+    </Content>
+    <None Include="DataSet\SoapDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SoapDataSet.Designer.cs</LastGenOutput>
+    </None>
+    <Content Include="DataSet\SoapDataSet.xss">
+      <DependentUpon>SoapDataSet.xsd</DependentUpon>
+    </Content>
     <None Include="Properties\PublishProfiles\ptprojectapi.pubxml" />
     <None Include="Scripts\jquery-2.1.0.intellisense.js" />
     <None Include="Scripts\jquery-2.1.0-vsdoc.js" />
+    <Content Include="App_Data\aspnet-WebApi-20141223094319.mdf" />
+    <Content Include="App_Data\aspnet-WebApi-20141223094319_log.ldf">
+      <DependentUpon>aspnet-WebApi-20141223094319.mdf</DependentUpon>
+    </Content>
+    <Content Include="Reports\SoapReport.aspx" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
     <Content Include="Views\Patient\Index.cshtml" />
@@ -402,7 +472,8 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Code\" />
+    <Folder Include="Views\Report\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -487,6 +558,35 @@
     <EmbeddedResource Include="Migrations\201502010922509_CranialNerveAssmt.resx">
       <DependentUpon>201502010922509_CranialNerveAssmt.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502010935245_CranialNerveUpdate.resx">
+      <DependentUpon>201502010935245_CranialNerveUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502022307424_UpToMBM.resx">
+      <DependentUpon>201502022307424_UpToMBM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502060819387_UpdateMBM.resx">
+      <DependentUpon>201502060819387_UpdateMBM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502060822159_UpdateMBM2.resx">
+      <DependentUpon>201502060822159_UpdateMBM2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502080630482_PlanExceptLandmarks.resx">
+      <DependentUpon>201502080630482_PlanExceptLandmarks.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502080841184_posteriorViewUpdate.resx">
+      <DependentUpon>201502080841184_posteriorViewUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502080935599_posteriorViewUpdate2.resx">
+      <DependentUpon>201502080935599_posteriorViewUpdate2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502110314488_FunctionalAnalysisUpdate.resx">
+      <DependentUpon>201502110314488_FunctionalAnalysisUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502110447121_PulmonaryAssessment.resx">
+      <DependentUpon>201502110447121_PulmonaryAssessment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\RDLC\AncillaryProcedureReport.rdlc" />
+    <EmbeddedResource Include="Reports\RDLC\SoapReport.rdlc" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
