--- a/WebApi/bin/WebApi.dll.config
+++ b/WebApi/bin/WebApi.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -10,14 +10,28 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Server=tcp:xal6s1q2qz.database.windows.net,1433;Database=webapidb;User ID=wadmin@xal6s1q2qz;Password=Gkvw526%;Trusted_Connection=False;Encrypt=True;"/>-->
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebApi-20141223094319.mdf;Initial Catalog=aspnet-WebApi-20141223094319;Integrated Security=True" />
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebApi-20141223094319.mdf;Initial Catalog=aspnet-WebApi-20141223094319;Integrated Security=True" />-->
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:xal6s1q2qz.database.windows.net,1433;Database=webapidb;User ID=wadmin@xal6s1q2qz;Password=Gkvw526%;Trusted_Connection=False;Encrypt=True;"/>
     <!--<add name="WebApiDataConnection" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3307;database=webapi-data;uid=root;password=s123456" />-->
     <!--<add name="WebApiDataConnection" providerName="System.Data.SqlClient" connectionString="server=localhost;port=3307;database=webapi-data;uid=root;password=s123456" />-->
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings />
   <system.web>
+    <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
+        validate="false" />
+    </httpHandlers>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+      </assemblies>
+      <buildProviders>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      </buildProviders>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
@@ -29,7 +43,9 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
