--- a/WebApi/packages.config
+++ b/WebApi/packages.config
@@ -34,6 +34,8 @@
   <package id="MySql.Data.Entities.EF6" version="6.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="ReportViewerCommon" version="11.0.0.0" targetFramework="net45" />
+  <package id="ReportViewerWebForms" version="11.0.0.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
