--- a/WebApi/Web.Release.config
+++ b/WebApi/Web.Release.config
@@ -15,8 +15,11 @@
     </connectionStrings>
   -->
   <connectionStrings>
-    <add name="DefaultConnection"
+    <!--<add name="DefaultConnection"
       connectionString="Server=tcp:xal6s1q2qz.database.windows.net,1433;Database=webapidb;User ID=wadmin@xal6s1q2qz;Password=Gkvw526%;Trusted_Connection=False;Encrypt=True;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>-->
+    <add name="DefaultConnection"
+      connectionString="Server=tcp:m77hjlcsu8.database.windows.net,1433;Database=webapidb2;User ID=wadmin2@m77hjlcsu8;Password=Gkvw526%;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   <system.web>
