--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=webapidb2;Integrated Security=True" />-->
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:m77hjlcsu8.database.windows.net,1433;Database=webapidb2;User ID=wadmin2@m77hjlcsu8;Password=Gkvw526%;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebApi-20141223094319.mdf;Initial Catalog=aspnet-WebApi-20141223094319;Integrated Security=True" />-->
     <!--<add name="WebApiDataConnection" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3307;database=webapi-data;uid=root;password=s123456" />-->
